# edu-kt

./: .gitignore  Makefile  README.md  settings.gradle.kts
back-end/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
back-end/apps/accounts/: admin.py  api.py  apps.py  auth.py  models.py  schemas.py
back-end/apps/accounts/management/commands/: seed_admin.py
back-end/apps/accounts/migrations/: 0001_initial.py  0002_user_birth_date_user_phone.py  0003_address.py  0004_delete_token.py
back-end/apps/accounts/tests/: test_addresses.py  test_auth.py
back-end/apps/cart/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
back-end/apps/cart/migrations/: 0001_initial.py
back-end/apps/cart/tests/: test_cart.py
back-end/apps/catalog/: admin.py  api.py  models.py  schemas.py
back-end/apps/catalog/management/commands/: seed_catalog.py
back-end/apps/catalog/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_product_image_url.py  0004_review.py
back-end/apps/catalog/tests/: test_products.py
back-end/apps/orders/: admin.py  api.py  models.py  schemas.py  services.py
back-end/apps/orders/migrations/: 0001_initial.py
back-end/apps/orders/tests/: test_orders.py
back-end/apps/support/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
back-end/apps/support/migrations/: 0001_initial.py
back-end/apps/support/tests/: test_support.py
back-end/config/: api.py  settings.py  test_settings.py  urls.py
back-end/tests/: test_settings_secret_key.py
(+103 files in other folders)
